# MIRAI-Research

./: Cargo.toml  README.md
another_crate/: Cargo.toml
another_crate/src/: lib.rs
main_crate/: Cargo.toml
main_crate/src/: main.rs
src/: main.rs
